--- a/src/sass/partials/_info.scss
+++ b/src/sass/partials/_info.scss
@@ -91,8 +91,8 @@
       }
 
       .notifications-checkbox {
-        padding-left: 28px;
-        margin-right: 50px;
+        margin-left: 27px;
+        margin-right: 35px;
       }
 
       .line {
